# agentpay-router

./: .env.example  .gitignore  LICENSE  README.md  SUBMISSION.md  index.html  package-lock.json  package.json  styles.css
contracts/: agentpay_router_interface.md
contracts/odra-router/: Cargo.toml  Odra.toml  README.md
contracts/odra-router/src/: lib.rs
docs/: HACKATHON_REQUIREMENTS.md
scripts/: check-wcspr.mjs  generate-key.mjs  inspect-deposit.mjs  inspect-wcspr.mjs  test-x402-verify.mjs
server/: agents.js  casper.js  config.js  index.js  llm.js  x402.js
src/: app.js
